--- a/Lab/Lab.ipynb
+++ b/Lab/Lab.ipynb
@@ -430,14 +430,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Kevin\\AppData\\Local\\Temp\\ipykernel_38024\\2749138109.py:7: FutureWarning: The behavior of `series[i:j]` with an integer-dtype index is deprecated. In a future version, this will be treated as *label-based* indexing, consistent with e.g. `series[i]` lookups. To retain the old behavior, use `series.iloc[i:j]`. To get the future behavior, use `series.loc[i:j]`.\n",
+      "C:\\Users\\Kevin\\AppData\\Local\\Temp\\ipykernel_38024\\1834840940.py:7: FutureWarning: The behavior of `series[i:j]` with an integer-dtype index is deprecated. In a future version, this will be treated as *label-based* indexing, consistent with e.g. `series[i]` lookups. To retain the old behavior, use `series.iloc[i:j]`. To get the future behavior, use `series.loc[i:j]`.\n",
       "  top_10_ratings_movieId = movies_num_ratings[:10].index\n"
      ]
     },
@@ -469,30 +469,6 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Toy Story (1995)</td>\n",
-       "      <td>Adventure|Animation|Children|Comedy|Fantasy</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>108</th>\n",
-       "      <td>110</td>\n",
-       "      <td>Braveheart (1995)</td>\n",
-       "      <td>Action|Drama|War</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>257</th>\n",
-       "      <td>260</td>\n",
-       "      <td>Star Wars: Episode IV - A New Hope (1977)</td>\n",
-       "      <td>Action|Adventure|Sci-Fi</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>293</th>\n",
-       "      <td>296</td>\n",
-       "      <td>Pulp Fiction (1994)</td>\n",
-       "      <td>Comedy|Crime|Drama|Thriller</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>315</th>\n",
        "      <td>318</td>\n",
        "      <td>Shawshank Redemption, The (1994)</td>\n",
@@ -503,6 +479,30 @@
        "      <td>356</td>\n",
        "      <td>Forrest Gump (1994)</td>\n",
        "      <td>Comedy|Drama|Romance|War</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>293</th>\n",
+       "      <td>296</td>\n",
+       "      <td>Pulp Fiction (1994)</td>\n",
+       "      <td>Comedy|Crime|Drama|Thriller</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>587</th>\n",
+       "      <td>593</td>\n",
+       "      <td>Silence of the Lambs, The (1991)</td>\n",
+       "      <td>Crime|Horror|Thriller</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2487</th>\n",
+       "      <td>2571</td>\n",
+       "      <td>Matrix, The (1999)</td>\n",
+       "      <td>Action|Sci-Fi|Thriller</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>257</th>\n",
+       "      <td>260</td>\n",
+       "      <td>Star Wars: Episode IV - A New Hope (1977)</td>\n",
+       "      <td>Action|Adventure|Sci-Fi</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>476</th>\n",
@@ -517,16 +517,16 @@
        "      <td>Drama|War</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>587</th>\n",
-       "      <td>593</td>\n",
-       "      <td>Silence of the Lambs, The (1991)</td>\n",
-       "      <td>Crime|Horror|Thriller</td>\n",
+       "      <th>108</th>\n",
+       "      <td>110</td>\n",
+       "      <td>Braveheart (1995)</td>\n",
+       "      <td>Action|Drama|War</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2487</th>\n",
-       "      <td>2571</td>\n",
-       "      <td>Matrix, The (1999)</td>\n",
-       "      <td>Action|Sci-Fi|Thriller</td>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Toy Story (1995)</td>\n",
+       "      <td>Adventure|Animation|Children|Comedy|Fantasy</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -534,60 +534,31 @@
       ],
       "text/plain": [
        "      movieId                                      title  \\\n",
-       "0           1                           Toy Story (1995)   \n",
-       "108       110                          Braveheart (1995)   \n",
-       "257       260  Star Wars: Episode IV - A New Hope (1977)   \n",
-       "293       296                        Pulp Fiction (1994)   \n",
        "315       318           Shawshank Redemption, The (1994)   \n",
        "352       356                        Forrest Gump (1994)   \n",
-       "476       480                       Jurassic Park (1993)   \n",
-       "523       527                    Schindler's List (1993)   \n",
+       "293       296                        Pulp Fiction (1994)   \n",
        "587       593           Silence of the Lambs, The (1991)   \n",
        "2487     2571                         Matrix, The (1999)   \n",
+       "257       260  Star Wars: Episode IV - A New Hope (1977)   \n",
+       "476       480                       Jurassic Park (1993)   \n",
+       "523       527                    Schindler's List (1993)   \n",
+       "108       110                          Braveheart (1995)   \n",
+       "0           1                           Toy Story (1995)   \n",
        "\n",
        "                                           genres  \n",
-       "0     Adventure|Animation|Children|Comedy|Fantasy  \n",
-       "108                              Action|Drama|War  \n",
-       "257                       Action|Adventure|Sci-Fi  \n",
-       "293                   Comedy|Crime|Drama|Thriller  \n",
        "315                                   Crime|Drama  \n",
        "352                      Comedy|Drama|Romance|War  \n",
+       "293                   Comedy|Crime|Drama|Thriller  \n",
+       "587                         Crime|Horror|Thriller  \n",
+       "2487                       Action|Sci-Fi|Thriller  \n",
+       "257                       Action|Adventure|Sci-Fi  \n",
        "476              Action|Adventure|Sci-Fi|Thriller  \n",
        "523                                     Drama|War  \n",
-       "587                         Crime|Horror|Thriller  \n",
-       "2487                       Action|Sci-Fi|Thriller  "
+       "108                              Action|Drama|War  \n",
+       "0     Adventure|Animation|Children|Comedy|Fantasy  "
       ]
      },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "Int64Index([318, 356, 296, 593, 2571, 260, 480, 527, 110, 1], dtype='int64', name='movieId')"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0         True\n",
-       "1        False\n",
-       "2        False\n",
-       "3        False\n",
-       "4        False\n",
-       "         ...  \n",
-       "58093    False\n",
-       "58094    False\n",
-       "58095    False\n",
-       "58096    False\n",
-       "58097    False\n",
-       "Name: movieId, Length: 58098, dtype: bool"
-      ]
-     },
-     "execution_count": 137,
+     "execution_count": 144,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -601,10 +572,15 @@
     "# Take the index (e.g movieId) of the first 10\n",
     "top_10_ratings_movieId = movies_num_ratings[:10].index\n",
     "\n",
-    "# Find the corresponding movie row\n",
-    "top_10_most_rated = movies_df.loc[movies_df['movieId'].isin(top_10_ratings_movieId)]\n",
+    "# Manually pull out single movies (e.g dataframes with one row) in order maintain the correct order as\n",
+    "# no indicators exist for how to sort the list. Explicitly not using isin() because it returns a dataframe\n",
+    "# thats already sorted by index. i spent wayyy to long on this...\n",
+    "top_10_most_rated = [movies_df.loc[movies_df['movieId'] == i] for i in top_10_ratings_movieId]\n",
     "\n",
-    "display(top_10_most_rated, top_10_ratings_movieId)"
+    "# concatenate all the individual dataframes into one. Meow!\n",
+    "top_10_most_rated = pd.concat(top_10_most_rated)\n",
+    "\n",
+    "top_10_most_rated"
    ]
   },
   {
@@ -617,35 +593,132 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Kevin\\AppData\\Local\\Temp\\ipykernel_38024\\321059918.py:3: FutureWarning: The behavior of `series[i:j]` with an integer-dtype index is deprecated. In a future version, this will be treated as *label-based* indexing, consistent with e.g. `series[i]` lookups. To retain the old behavior, use `series.iloc[i:j]`. To get the future behavior, use `series.loc[i:j]`.\n",
-      "  movies_mean_ratings = movies_mean_ratings['rating'][:10]\n"
-     ]
-    },
-    {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>userId</th>\n",
+       "      <th>rating</th>\n",
+       "      <th>timestamp</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>movieId</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>141939.237859</td>\n",
+       "      <td>3.886649</td>\n",
+       "      <td>1.128094e+09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>142395.293962</td>\n",
+       "      <td>3.246583</td>\n",
+       "      <td>1.105961e+09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>140371.877575</td>\n",
+       "      <td>3.173981</td>\n",
+       "      <td>9.692933e+08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>140527.990632</td>\n",
+       "      <td>2.874540</td>\n",
+       "      <td>9.405874e+08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>141254.322735</td>\n",
+       "      <td>3.077291</td>\n",
+       "      <td>9.970812e+08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>193876</th>\n",
+       "      <td>103565.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>1.537875e+09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>193878</th>\n",
+       "      <td>176871.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>1.537875e+09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>193880</th>\n",
+       "      <td>81710.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>1.537886e+09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>193882</th>\n",
+       "      <td>33330.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>1.537891e+09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>193886</th>\n",
+       "      <td>216362.000000</td>\n",
+       "      <td>3.250000</td>\n",
+       "      <td>1.537917e+09</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>53889 rows × 3 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "movieId\n",
-       "1     3.886649\n",
-       "2     3.246583\n",
-       "3     3.173981\n",
-       "4     2.874540\n",
-       "5     3.077291\n",
-       "6     3.844211\n",
-       "7     3.371348\n",
-       "8     3.122482\n",
-       "9     3.007530\n",
-       "10    3.431633\n",
-       "Name: rating, dtype: float64"
+       "                userId    rating     timestamp\n",
+       "movieId                                       \n",
+       "1        141939.237859  3.886649  1.128094e+09\n",
+       "2        142395.293962  3.246583  1.105961e+09\n",
+       "3        140371.877575  3.173981  9.692933e+08\n",
+       "4        140527.990632  2.874540  9.405874e+08\n",
+       "5        141254.322735  3.077291  9.970812e+08\n",
+       "...                ...       ...           ...\n",
+       "193876   103565.000000  3.000000  1.537875e+09\n",
+       "193878   176871.000000  2.000000  1.537875e+09\n",
+       "193880    81710.000000  2.000000  1.537886e+09\n",
+       "193882    33330.000000  2.000000  1.537891e+09\n",
+       "193886   216362.000000  3.250000  1.537917e+09\n",
+       "\n",
+       "[53889 rows x 3 columns]"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 149,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -653,9 +726,10 @@
    "source": [
     "# Groupby movieId and get the size of each list\n",
     "movies_mean_ratings = ratings_df.groupby(['movieId']).mean()\n",
-    "movies_mean_ratings = movies_mean_ratings['rating'][:10]\n",
+    "#movies_mean_ratings = movies_mean_ratings['rating'][:10]\n",
     "\n",
-    "# NOTE: still sorted by highest number of ratings\n",
+    "#movies_mean_ratings = movies_mean_ratings.sort_values(ascending=False)\n",
+    "\n",
     "movies_mean_ratings"
    ]
   },
