--- a/Lab/foolin around.ipynb
+++ b/Lab/foolin around.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [
     {
@@ -90,6 +90,12 @@
        "      <td>2001</td>\n",
        "      <td>30</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>hockey</td>\n",
+       "      <td>2003</td>\n",
+       "      <td>40</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -98,7 +104,8 @@
        "      sport  year  goals\n",
        "0   bowling  2000     10\n",
        "1  football  2001     20\n",
-       "2    hockey  2001     30"
+       "2    hockey  2001     30\n",
+       "3    hockey  2003     40"
       ]
      },
      "metadata": {},
@@ -127,9 +134,11 @@
        "      <th>year</th>\n",
        "      <th>2000</th>\n",
        "      <th>2001</th>\n",
+       "      <th>2003</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>sport</th>\n",
+       "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "    </tr>\n",
@@ -139,27 +148,30 @@
        "      <th>bowling</th>\n",
        "      <td>10.0</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>football</th>\n",
        "      <td>0.0</td>\n",
        "      <td>20.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>hockey</th>\n",
        "      <td>0.0</td>\n",
        "      <td>30.0</td>\n",
+       "      <td>40.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "year      2000  2001\n",
-       "sport               \n",
-       "bowling   10.0   0.0\n",
-       "football   0.0  20.0\n",
-       "hockey     0.0  30.0"
+       "year      2000  2001  2003\n",
+       "sport                     \n",
+       "bowling   10.0   0.0   0.0\n",
+       "football   0.0  20.0   0.0\n",
+       "hockey     0.0  30.0  40.0"
       ]
      },
      "metadata": {},
@@ -169,9 +181,9 @@
    "source": [
     "df = pd.DataFrame(\n",
     "    {\n",
-    "        'sport': ['bowling', 'football', 'hockey'],\n",
-    "        'year': [2000, 2001, 2001],\n",
-    "        'goals': [10, 20, 30],\n",
+    "        'sport': ['bowling', 'football', 'hockey', 'hockey'],\n",
+    "        'year': [2000, 2001, 2001, 2003],\n",
+    "        'goals': [10, 20, 30, 40],\n",
     "    }\n",
     ")\n",
     "\n",
@@ -181,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +238,7 @@
        "0  bowling  2000     10"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 159,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [
     {
@@ -246,10 +258,11 @@
        "year\n",
        "2000    1\n",
        "2001    2\n",
+       "2003    1\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 160,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +332,7 @@
        "0   bowling  2000     10"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 161,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [
     {
@@ -381,6 +394,12 @@
        "      <td>2001</td>\n",
        "      <td>30</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>hockey</td>\n",
+       "      <td>2003</td>\n",
+       "      <td>40</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -389,10 +408,11 @@
        "      sport  year  goals\n",
        "0   bowling  2000     10\n",
        "1  football  2001     20\n",
-       "2    hockey  2001     30"
+       "2    hockey  2001     30\n",
+       "3    hockey  2003     40"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 162,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -403,7 +423,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 163,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "year\n",
+       "2000    10\n",
+       "2001    50\n",
+       "2003    40\n",
+       "Name: goals, dtype: int64"
+      ]
+     },
+     "execution_count": 163,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test = df.groupby(['year'])['goals'].sum(numeric_only=True)\n",
+    "test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 164,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "year\n",
+       "2000    10.0\n",
+       "2001    25.0\n",
+       "2003    40.0\n",
+       "Name: goals, dtype: float64"
+      ]
+     },
+     "execution_count": 164,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test = df.groupby(['year'])['goals'].mean()\n",
+    "test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 260,
    "metadata": {},
    "outputs": [
     {
@@ -427,41 +497,121 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>goals</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
+       "      <th>sport</th>\n",
        "      <th>year</th>\n",
-       "      <th></th>\n",
+       "      <th>goals</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2000</th>\n",
+       "      <th>0</th>\n",
+       "      <td>bowling</td>\n",
+       "      <td>2000</td>\n",
        "      <td>10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2001</th>\n",
-       "      <td>50</td>\n",
+       "      <th>3</th>\n",
+       "      <td>hockey</td>\n",
+       "      <td>2003</td>\n",
+       "      <td>40</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      goals\n",
-       "year       \n",
-       "2000     10\n",
-       "2001     50"
+       "     sport  year  goals\n",
+       "0  bowling  2000     10\n",
+       "3   hockey  2003     40"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 260,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "test = df.groupby(['year'])['goals'].sum(numeric_only=True)\n",
-    "test"
+    "test = df.groupby('year').size()\n",
+    "\n",
+    "f = df.drop(df[df['year'].isin(test[test > 1].index)].index)\n",
+    "f"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 239,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sport</th>\n",
+       "      <th>year</th>\n",
+       "      <th>goals</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>bowling</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>football</td>\n",
+       "      <td>2001</td>\n",
+       "      <td>20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>hockey</td>\n",
+       "      <td>2001</td>\n",
+       "      <td>30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>hockey</td>\n",
+       "      <td>2003</td>\n",
+       "      <td>40</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      sport  year  goals\n",
+       "0   bowling  2000     10\n",
+       "1  football  2001     20\n",
+       "2    hockey  2001     30\n",
+       "3    hockey  2003     40"
+      ]
+     },
+     "execution_count": 239,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
    ]
   }
  ],
