--- a/Lab/Lab part 1.ipynb
+++ b/Lab/Lab part 1.ipynb
@@ -20,12 +20,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "movies_df = pd.read_csv('Data/movies.csv')\n",
-    "ratings_df = pd.read_csv('Data/ratings.csv') # Desperate attempts"
+    "ratings_df = pd.read_csv('Data/ratings.csv')"
    ]
   },
   {
