--- a/Lab/Lab part 2.ipynb
+++ b/Lab/Lab part 2.ipynb
@@ -2174,177 +2174,26 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 771,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>age</th>\n",
-       "      <th>gender</th>\n",
-       "      <th>height</th>\n",
-       "      <th>weight</th>\n",
-       "      <th>bmi</th>\n",
-       "      <th>bmi-feature</th>\n",
-       "      <th>ap_hi</th>\n",
-       "      <th>ap_lo</th>\n",
-       "      <th>bp-feature</th>\n",
-       "      <th>cholesterol</th>\n",
-       "      <th>gluc</th>\n",
-       "      <th>smoke</th>\n",
-       "      <th>alco</th>\n",
-       "      <th>active</th>\n",
-       "      <th>cardio</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>18393</td>\n",
-       "      <td>2</td>\n",
-       "      <td>168</td>\n",
-       "      <td>62.0</td>\n",
-       "      <td>21</td>\n",
-       "      <td>normal</td>\n",
-       "      <td>110</td>\n",
-       "      <td>80</td>\n",
-       "      <td>stage 1 hypertension</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>20228</td>\n",
-       "      <td>1</td>\n",
-       "      <td>156</td>\n",
-       "      <td>85.0</td>\n",
-       "      <td>34</td>\n",
-       "      <td>obese (class I)</td>\n",
-       "      <td>140</td>\n",
-       "      <td>90</td>\n",
-       "      <td>stage 2 hypertension</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>18857</td>\n",
-       "      <td>1</td>\n",
-       "      <td>165</td>\n",
-       "      <td>64.0</td>\n",
-       "      <td>23</td>\n",
-       "      <td>normal</td>\n",
-       "      <td>130</td>\n",
-       "      <td>70</td>\n",
-       "      <td>stage 1 hypertension</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>17623</td>\n",
-       "      <td>2</td>\n",
-       "      <td>169</td>\n",
-       "      <td>82.0</td>\n",
-       "      <td>28</td>\n",
-       "      <td>overweight</td>\n",
-       "      <td>150</td>\n",
-       "      <td>100</td>\n",
-       "      <td>stage 2 hypertension</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>17474</td>\n",
-       "      <td>1</td>\n",
-       "      <td>156</td>\n",
-       "      <td>56.0</td>\n",
-       "      <td>23</td>\n",
-       "      <td>normal</td>\n",
-       "      <td>100</td>\n",
-       "      <td>60</td>\n",
-       "      <td>healthy</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   id    age  gender  height  weight  bmi      bmi-feature  ap_hi  ap_lo  \\\n",
-       "0   0  18393       2     168    62.0   21           normal    110     80   \n",
-       "1   1  20228       1     156    85.0   34  obese (class I)    140     90   \n",
-       "2   2  18857       1     165    64.0   23           normal    130     70   \n",
-       "3   3  17623       2     169    82.0   28       overweight    150    100   \n",
-       "4   4  17474       1     156    56.0   23           normal    100     60   \n",
-       "\n",
-       "             bp-feature  cholesterol  gluc  smoke  alco  active  cardio  \n",
-       "0  stage 1 hypertension            1     1      0     0       1       0  \n",
-       "1  stage 2 hypertension            3     1      0     0       1       1  \n",
-       "2  stage 1 hypertension            3     1      0     0       0       1  \n",
-       "3  stage 2 hypertension            1     1      0     0       1       1  \n",
-       "4               healthy            1     1      0     0       0       0  "
-      ]
-     },
-     "execution_count": 771,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "df.head()"
+    "### 2.2.1 - Visualiseringar korrelation"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### The results are actually quite suprising in that the correlation one would normally expect for various features isn't all that significant. Take smoking as an example. The logical conclusion would be that smoking would increase you're risk of contracting cardiovascular disease by a meaningful amount, but apparently that doens't seem to be the case. Don't get me wrong, the correlation is definitely there (as can be seen by the value of -0.016), but it's not as striking as one would expect. The same thing can be seen with other features such as \"activity\".\n",
+    "\n",
+    "##### The question of as to why some features are correlated in the first place is an easy one. The answere is that there simply exists various real world features that correlate with eachother. That is, if (for example) you've got a low blood pressure, the resulting probability of you contracting cardiovascular disease is simply lower. Same with things like glucose. <br> Simply put, a correlation in this case signifies an increase/decrease in one variables value, given the alteration of another. Increase blood pressure and you increase the rate of cardiovascular disease."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 784,
+   "execution_count": 787,
    "metadata": {},
    "outputs": [
     {
@@ -2367,13 +2216,19 @@
     }
    ],
    "source": [
-    "# Calculate the correlation matrix\n",
     "corr_matrix = df.corr()\n",
     "\n",
-    "# Create the heatmap with larger size\n",
     "plt.figure(figsize=(15,8))\n",
     "sns.heatmap(corr_matrix, annot=True, cmap='coolwarm')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.3 - Skapa två dataset"
    ]
   }
  ],
