--- a/Lab/Lab part 2.ipynb
+++ b/Lab/Lab part 2.ipynb
@@ -2621,13 +2621,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 912,
+   "execution_count": 944,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# N / (1 - N)\n",
+    "\n",
+    "# Train val test\n",
+    "df1_x_train, df1_x_test, df1_y_train, df1_y_test = train_test_split(\n",
+    "    df1_x, df1_y, test_size=0.2, random_state=42\n",
+    ")\n",
+    "\n",
+    "df1_x_val, df1_x_val, df1_y_val, df1_y_val = train_test_split(df1_x_train, df1_y_train, test_size=0.25, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 945,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df2_x_train, df2_x_test, df2_y_train, df2_y_test = train_test_split(\n",
+    "    df2_x, df2_y, test_size=0.20, random_state=42\n",
+    ")\n",
+    "\n",
+    "df2_x_val, df2_x_val, df2_y_val, df2_y_val = train_test_split(df2_x_train, df2_y_train, test_size=0.25, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 946,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "((45692, 16), (22506, 16), (45692,), (22506,))"
+       "((54558, 16), (54558,), (13640, 16), (13640,), (13640, 16), (13640,))"
       ]
      },
      "metadata": {},
@@ -2636,7 +2665,7 @@
     {
      "data": {
       "text/plain": [
-       "((45692, 11), (22506, 11), (45692,), (22506,))"
+       "((54558, 11), (54558,), (13640, 11), (13640,), (13640, 11), (13640,))"
       ]
      },
      "metadata": {},
@@ -2644,19 +2673,10 @@
     }
    ],
    "source": [
-    "# Train val test\n",
-    "df1_x_train, df1_x_test, df1_y_train, df1_y_test = train_test_split(\n",
-    "    df1_x, df1_y, test_size=0.33, random_state=42\n",
-    ")\n",
-    "\n",
-    "df2_x_train, df2_x_test, df2_y_train, df2_y_test = train_test_split(\n",
-    "    df2_x, df2_y, test_size=0.33, random_state=42\n",
-    ")\n",
-    "\n",
     "display(\n",
-    "    (df1_x_train.shape, df1_x_test.shape, df1_y_train.shape, df1_y_test.shape),\n",
-    "    (df2_x_train.shape, df2_x_test.shape, df2_y_train.shape, df2_y_test.shape)\n",
-    ")\n"
+    "    (df1_x_train.shape, df1_y_train.shape, df1_x_val.shape, df1_y_val.shape, df1_x_test.shape, df1_y_test.shape),\n",
+    "    (df2_x_train.shape, df2_y_train.shape, df2_x_val.shape, df2_y_val.shape, df2_x_test.shape, df2_y_test.shape),\n",
+    ")"
    ]
   },
   {
@@ -2669,26 +2689,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 921,
+   "execution_count": 938,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(3.732168795028102e-18, 1.0, 3.732168795028102e-18, 1.0)"
+       "(3.732168795028102e-18, 1.0, 0.0018834289794447687, 0.9981996481289713)"
       ]
      },
-     "execution_count": 921,
+     "execution_count": 938,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "scaler = StandardScaler()\n",
-    "df1_scaled_x_train = scaler.fit_transform(df1_x_train)\n",
-    "df1_scaled_x_test = scaler.transform(df1_x_train)\n",
+    "df1_x_train = scaler.fit_transform(df1_x_train)\n",
+    "df1_x_val = scaler.transform(df1_x_val)\n",
     "\n",
-    "df1_scaled_x_train.mean(), df1_scaled_x_train.std(), df1_scaled_x_test.mean(), df1_scaled_x_test.std()"
+    "df1_x_train.mean(), df1_x_train.std(), df1_x_val.mean(), df1_x_val.std()"
    ]
   },
   {
@@ -2697,8 +2717,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#\n",
-    "# Logistic regression"
+    "# Logistic regression\n",
+    "# decision tree\n",
+    "# random forest"
    ]
   }
  ],
