--- a/Lab/Lab part 1.ipynb
+++ b/Lab/Lab part 1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -548,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -668,7 +668,7 @@
        "0     Adventure|Animation|Children|Comedy|Fantasy  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -710,7 +710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -841,7 +841,7 @@
        "0     Adventure|Animation|Children|Comedy|Fantasy        3.886649  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -872,7 +872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -911,7 +911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -950,7 +950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -979,7 +979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -1035,7 +1035,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -1079,7 +1079,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -1197,7 +1197,7 @@
        "[27753444 rows x 3 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1234,7 +1234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -1262,7 +1262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -1290,7 +1290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -1320,7 +1320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -1352,7 +1352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -1370,16 +1370,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(24579, 243558)"
+       "(58092, 243558)"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1388,7 +1388,7 @@
     "# NOTE: taken from ChatGPT.\n",
     "\n",
     "# Convert movieId & userId to Categorical's to make them work with csr_matrix\n",
-    "movieIds = pd.Categorical(ratings_df['movieId'])\n",
+    "movieIds = pd.Categorical(ratings_df['movieId'], categories=movies_df['movieId'])\n",
     "userIds = pd.Categorical(ratings_df['userId'])\n",
     "\n",
     "# Create the csr matrix\n",
@@ -1407,7 +1407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1416,19 +1416,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<style>#sk-container-id-1 {color: black;background-color: white;}#sk-container-id-1 pre{padding: 0;}#sk-container-id-1 div.sk-toggleable {background-color: white;}#sk-container-id-1 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-1 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-1 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-1 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-1 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-1 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-1 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-1 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-1 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-1 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-1 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-1 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-1 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-1 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-1 div.sk-item {position: relative;z-index: 1;}#sk-container-id-1 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-1 div.sk-item::before, #sk-container-id-1 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-1 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-1 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-1 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-1 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-1 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-1 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-1 div.sk-label-container {text-align: center;}#sk-container-id-1 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-1 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>NearestNeighbors(algorithm=&#x27;brute&#x27;, metric=&#x27;cosine&#x27;, n_neighbors=20)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" checked><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">NearestNeighbors</label><div class=\"sk-toggleable__content\"><pre>NearestNeighbors(algorithm=&#x27;brute&#x27;, metric=&#x27;cosine&#x27;, n_neighbors=20)</pre></div></div></div></div></div>"
+       "<style>#sk-container-id-4 {color: black;background-color: white;}#sk-container-id-4 pre{padding: 0;}#sk-container-id-4 div.sk-toggleable {background-color: white;}#sk-container-id-4 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-4 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-4 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-4 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-4 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-4 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-4 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-4 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-4 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-4 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-4 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-4 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-4 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-4 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-4 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-4 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-4 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-4 div.sk-item {position: relative;z-index: 1;}#sk-container-id-4 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-4 div.sk-item::before, #sk-container-id-4 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-4 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-4 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-4 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-4 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-4 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-4 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-4 div.sk-label-container {text-align: center;}#sk-container-id-4 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-4 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-4\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>NearestNeighbors(algorithm=&#x27;brute&#x27;, metric=&#x27;cosine&#x27;, n_neighbors=20)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-4\" type=\"checkbox\" checked><label for=\"sk-estimator-id-4\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">NearestNeighbors</label><div class=\"sk-toggleable__content\"><pre>NearestNeighbors(algorithm=&#x27;brute&#x27;, metric=&#x27;cosine&#x27;, n_neighbors=20)</pre></div></div></div></div></div>"
       ],
       "text/plain": [
        "NearestNeighbors(algorithm='brute', metric='cosine', n_neighbors=20)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1439,7 +1439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -1448,26 +1448,26 @@
      "text": [
       "Movie Selected:  Toy Story (1995) Index:  0\n",
       "Searching for recommendations.....\n",
-      "0                                                   NaN\n",
-      "762                          Spirits of the Dead (1968)\n",
-      "257           Star Wars: Episode IV - A New Hope (1977)\n",
-      "352                                 Forrest Gump (1994)\n",
-      "638                      Nelly & Monsieur Arnaud (1995)\n",
-      "476                                Jurassic Park (1993)\n",
-      "1165                         Thin Blue Line, The (1988)\n",
-      "989     Davy Crockett, King of the Wild Frontier (1955)\n",
-      "2850                               Lady Eve, The (1941)\n",
-      "582                                      Aladdin (1992)\n",
-      "1112                            Private Benjamin (1980)\n",
-      "360                               Lion King, The (1994)\n",
-      "722                     Getting Away With Murder (1996)\n",
-      "31            Twelve Monkeys (a.k.a. 12 Monkeys) (1995)\n",
-      "293                                 Pulp Fiction (1994)\n",
-      "2347                                 Patch Adams (1998)\n",
-      "315                    Shawshank Redemption, The (1994)\n",
-      "1099                            Plutonium Circus (1995)\n",
-      "719                           Heaven's Prisoners (1996)\n",
-      "587                    Silence of the Lambs, The (1991)\n",
+      "0                                                     NaN\n",
+      "3028                                   Toy Story 2 (1999)\n",
+      "257             Star Wars: Episode IV - A New Hope (1977)\n",
+      "352                                   Forrest Gump (1994)\n",
+      "1242                            Back to the Future (1985)\n",
+      "360                                 Lion King, The (1994)\n",
+      "582                                        Aladdin (1992)\n",
+      "476                                  Jurassic Park (1993)\n",
+      "1184    Star Wars: Episode VI - Return of the Jedi (1983)\n",
+      "4791                                Monsters, Inc. (2001)\n",
+      "315                      Shawshank Redemption, The (1994)\n",
+      "6272                                  Finding Nemo (2003)\n",
+      "767                  Independence Day (a.k.a. ID4) (1996)\n",
+      "1171    Star Wars: Episode V - The Empire Strikes Back...\n",
+      "4212                                         Shrek (2001)\n",
+      "293                                   Pulp Fiction (1994)\n",
+      "2487                                   Matrix, The (1999)\n",
+      "1173    Raiders of the Lost Ark (Indiana Jones and the...\n",
+      "1052           Willy Wonka & the Chocolate Factory (1971)\n",
+      "587                      Silence of the Lambs, The (1991)\n",
       "Name: title, dtype: object\n"
      ]
     }
