--- a/Lab/Lab part 2.ipynb
+++ b/Lab/Lab part 2.ipynb
@@ -2431,7 +2431,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* train|validation|test split"
+    "Chosen models:\n",
+    "* Logistic regression\n",
+    "* decision tree\n",
+    "* random forest"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### train|validation|test split"
    ]
   },
   {
@@ -2709,17 +2720,6 @@
     "df1_x_val = scaler.transform(df1_x_val)\n",
     "\n",
     "df1_x_train.mean(), df1_x_train.std(), df1_x_val.mean(), df1_x_val.std()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Logistic regression\n",
-    "# decision tree\n",
-    "# random forest"
    ]
   }
  ],
