--- a/Lab/foolin around.ipynb
+++ b/Lab/foolin around.ipynb
@@ -1034,6 +1034,19 @@
     "\n",
     "test"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ap_hi = 119\n",
+    "ap_lo = 90\n",
+    "\n",
+    "if (120 <= ap_hi <= 129) & (ap_lo < 80):\n",
+    "    print('elevated')"
+   ]
   }
  ],
  "metadata": {
